SIT-000 feedback window flicker fix, fix creditType resolution

--- a/app/assets/stylesheets/partial/_feedback.scss
+++ b/app/assets/stylesheets/partial/_feedback.scss
@@ -1,5 +1,9 @@
 #feedback {
 
+  .body {
+    position: relative;
+  }
+
   .wrapper {
     z-index: 400;
     padding: 1em;
@@ -8,8 +12,8 @@
     right: 50px;
     border-radius: 25px;
     border: 2px solid #8AC007;
-    background: rgba(255,255,255,0.7);
-    min-width: 603px;
+    background: rgba(255, 255, 255, 0.7);
+    width: 603px;
     margin: 2px;
   }
 
